No need for hash

--- a/app/templates/posting.html
+++ b/app/templates/posting.html
@@ -8,7 +8,7 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
-    <p id="#count">160</p>
+    <p id="count">160</p>
     <script>
         var count = document.getElementById("count");
         var field = document.getElementById("tweet");
