--- a/app/templates/posting.html
+++ b/app/templates/posting.html
@@ -10,10 +10,12 @@
     </form>
     <p id="count">160</p>
     <script>
+        var max_chars = 160;
         var count = document.getElementById("count");
-        var field = document.getElementById("tweet");
-        field.addEventListener("keydown", function(event) {
-            count.textContent = String(160 - document.getElementById("tweet").value.length);
+        count.textCont
+        document.getElementById("tweet")
+                    .addEventListener("keyup", function(event) {
+            count.textContent = String(max_chars - document.getElementById("tweet").value.length);
         });
     </script>
 {% endblock %}
